# plasma-kaapi

./: InstallationGuide  Makefile  Makefile.internal  Makefile.tau  README  README.md  ReleaseNotes  ToDo  make.inc  make.inc.example  make.inc.idgraf
compute/: Makefile  cgebrd.c  cgecfi.c  cgecfi2.c  cgecfi2.h  cgelqf.c  cgelqs.c  cgels.c  cgemm.c  cgeqrf.c  cgeqrs.c  cgesv.c  cgesv_incpiv.c  cgesvd.c  cgetmi.c  cgetrf.c  cgetrf_incpiv.c  cgetrs.c  cgetrs_incpiv.c  cheev.c  chegst.c  chegv.c  chemm.c  cher2k.c  cherk.c  chetrd.c  clange.c  clanhe.c  clansy.c  claswp.c  clauum.c  cplghe.c  cplgsy.c  cplrnt.c  cposv.c  cpotrf.c  cpotri.c  cpotrs.c  csymm.c  csyr2k.c  (+336 more)
control/: Makefile  allocate.c  allocate.h  async.c  async.h  auxiliary.c  auxiliary.h  common.h  compute_c.h  compute_d.h  compute_s.h  compute_z.h  context.c  context.h  control.c  control.h  core_blas_dag.h  ctile.c  descriptor.c  descriptor.h  dtile.c  gkkleader.c  gkkleader.h  global.h  pctile.c  pdtile.c  plasma_cf77.c  plasma_cf90.F90  plasma_cf90_wrappers.F90  plasma_df77.c  plasma_df90.F90  plasma_df90_wrappers.F90  plasma_f77.c  plasma_f90.f90  plasma_mf77.c  plasma_sf77.c  plasma_sf90.F90  plasma_sf90_wrappers.F90  plasma_zf77.c  plasma_zf90.F90  (+19 more)
core_blas-eztrace/: Makefile  coreblas.c  coreblas_c.c  coreblas_d.c  coreblas_ev_codes.h  coreblas_macros.h  coreblas_s.c  coreblas_string.c  coreblas_z.c  eztrace_convert_coreblas.c
quark/: CMakeLists.txt  Makefile  icl_hash.c  quark.c  quark.h  quark_trace.h  quark_unpack_args.h  quarkos-hwloc.c  quarkos.c  quarkwinthread.c  quarkwinthread.h
(+629 files in other folders)
